force-app/main/default/objects/Fields_of_Research__c.object
<CustomObject>
    <description>ANZSRC Fields of Research (FoR) Codes (https://www.arc.gov.au/sites/default/files/minisite/static/10419/ERA2015/app-3_appendix-2.html)</description>
    <fields>
        <fullName>ERA_Cluster_Name__c</fullName>
        <description>ERA Cluster Name</description>
        <inlineHelpText>ERA Cluster Name</inlineHelpText>
        <label>ERA Cluster Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERA_Cluster__c</fullName>
        <description>ANZSRC Fields of Research (FoR) Category</description>
        <inlineHelpText>ANZSRC Fields of Research (FoR) Category</inlineHelpText>
        <label>ERA Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Mathematical Sciences</fullName>
                </value>
                <value>
                    <fullName>02 Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>03 Chemical Sciences</fullName>
                </value>
                <value>
                    <fullName>04 Earth Sciences</fullName>
                </value>
                <value>
                    <fullName>05 Environmental Sciences</fullName>
                </value>
                <value>
                    <fullName>06 Biological Sciences</fullName>
                </value>
                <value>
                    <fullName>07 Agricultural and Veterinary Sciences</fullName>
                </value>
                <value>
                    <fullName>08 Information and Computing Sciences</fullName>
                </value>
                <value>
                    <fullName>09 Engineering</fullName>
                </value>
                <value>
                    <fullName>10 Technology</fullName>
                </value>
                <value>
                    <fullName>11 Medical and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>12 Built Environment and Design</fullName>
                </value>
                <value>
                    <fullName>13 Education</fullName>
                </value>
                <value>
                    <fullName>14 Economics</fullName>
                </value>
                <value>
                    <fullName>15 Commerce, Management, Tourism and Services</fullName>
                </value>
                <value>
                    <fullName>16 Studies in Human Society</fullName>
                </value>
                <value>
                    <fullName>17 Psychology and Cognitive Sciences</fullName>
                </value>
                <value>
                    <fullName>18 Law and Legal Studies</fullName>
                </value>
                <value>
                    <fullName>19 Studies in Creative Arts and Writing</fullName>
                </value>
                <value>
                    <fullName>20 Language, Communication and Culture</fullName>
                </value>
                <value>
                    <fullName>21 History and Archaeology</fullName>
                </value>
                <value>
                    <fullName>22 Philosophy and Religious Studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FoR_Code__c</fullName>
        <description>FoR Code stating the code/number linked to the Field of Research</description>
        <externalId>true</externalId>
        <inlineHelpText>FoR Code - https://www.arc.gov.au/sites/default/files/minisite/static/10419/ERA2015/app-3_appendix-2.html</inlineHelpText>
        <label>FoR Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FoR_Name__c</fullName>
        <description>FoR Name</description>
        <inlineHelpText>FoR Name</inlineHelpText>
        <label>FoR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_level__c</fullName>
        <description>Describes the Hierarchy Level for the division, group and field</description>
        <formula>CASE(LEN(FoR_Code__c), 
	2,&quot;Division&quot;, 
	4,&quot;Group&quot;,
	6,&quot;Field&quot;,
	&quot;N/A&quot;)</formula>
        <inlineHelpText>Describes the Hierarchy Level for the division, group and field</inlineHelpText>
        <label>Hierarchical level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this to TRUE if this FoR is inactive and not to be used</description>
        <inlineHelpText>Set this to TRUE if this FoR is inactive and not to be used</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_FoR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent FoR Code for FoR Type Group or Field</description>
        <inlineHelpText>Parent FoR Code for FoR Type Group or Field</inlineHelpText>
        <label>Parent FoR</label>
        <referenceTo>Fields_of_Research__c</referenceTo>
        <relationshipLabel>Child Fields of Research</relationshipLabel>
        <relationshipName>Child_Fields_of_Research</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fields of Research</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FoR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields of Research</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>